# AI-Knowledge-Hub

./: .gitignore  PROJECT_SPEC.md  README.md
Sprint/: Sprint1.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: a0d1adf95f0b_create_users_table.py
backend/app/: main.py
backend/app/api/: auth.py  dependencies.py  exception_handlers.py  health.py  user.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/db/repositories/: user_repository.py
backend/app/models/: __init__.py  user.py
backend/app/schemas/: auth.py  health.py  user.py
backend/app/services/: auth_service.py  health_service.py
backend/tests/: conftest.py  test_auth_api.py  test_auth_schema.py  test_auth_service.py  test_config.py  test_health.py  test_security.py  test_user_api.py  test_user_repository.py  test_user_schema.py
docs/: 00_项目愿景.md  01_学习路线.md  04_API规范.md  08_CodeReview规范.md  AI协作规范.md  API规范.md  CodeReview规范.md  PROJECT_CONSTITUTION.md  README.md  数据库规范.md  编码规范.md  部署规范.md  项目愿景.md  项目目录.md
docs/Sprint/: Sprint0.md  Sprint1.md  Sprint2.md  Sprint长期路线.md
docs/architecture/: project-structure.md  system-overview.md
docs/architecture/adr/: ADR-0001-use-uv.md  ADR-0002-use-sqlalchemy2.md  ADR-0003-config-with-pydantic-settings.md  ADR-0004-use-alembic.md  ADR-0005-logging-standard.md  ADR-0006-use-compose-for-local-mysql.md  ADR-0007-dedicated-mysql-application-user.md  (+7 more)
infra/: .env.example  compose.dev.yaml
