[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.14.0",
    "bcrypt==5.0.0",
    "fastapi==0.115.6",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "pymysql==1.1.1",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
